rust/kcl-lib/tests/surface_extrude_edge_to/execution_error.snap
---
source: kcl-lib/src/simulation_tests.rs
description: Error from executing surface_extrude_edge_to.kcl
---
KCL Semantic error

  × semantic: Extruding an edge with the `to` parameter isn't supported yet.
  │ Use an explicit length instead.
    ╭─[18:14]
 17 │ 
 18 │ extrude002 = extrude(b, bodyType = SURFACE, to = offsetPlane(XY, offset = 10), method = NEW)
    ·              ───────────────────────────────────────┬───────────────────────────────────────┬
    ·                                                     ╰── tests/surface_extrude_edge_to/input.kcl
    ·                                                     ╰── tests/surface_extrude_edge_to/input.kcl
    ╰────
  ╰─▶ KCL Semantic error
      
        × semantic: Extruding an edge with the `to` parameter isn't supported
        │ yet. Use an explicit length instead.
          ╭─[18:14]
       17 │
       18 │ extrude002 = extrude(b, bodyType = SURFACE, to = offsetPlane(XY,
      offset = 10), method = NEW)
          ·
      ───────────────────────────────────────┬────────────────────────────────
      ───────
          ·                                                     ╰── tests/
      surface_extrude_edge_to/input.kcl
          ╰────
